# tool-registry

./: .gitignore  DESCRIBE_TOOL.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
conf/: settings.toml
config/: config.toml
resources/supported-tools/: csv_to_tabular.json
scripts/: postman-rest-pre-request-script.js
src/: get_admin_token.py  main.py
src/tool_registry/: config.py  db.py  security.py
src/tool_registry/api/: jobs.py  public.py  root.py  tools.py
