[project]
name = "tool-registry"
version = "0.2.0-dev"
description = "Tools Registry (Catalogue of Tools): a reference implementation and specification to publish, curate, and expose value‑adding services, workflows, and tools in a managed registry."
readme = "README.md"
title = "Tool Registry API Service"
requires-python = ">=3.12.8"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi>=0.128.0",
    "toolmeta-harvester @ git+https://github.com/EOSC-Data-Commons/toolmeta-harvester.git@main",
    "uvicorn>=0.40.0",
]

